moved to gin for better stuff

--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Gosia i Michał",
+  "name": "Zaproszenie",
   "icons": [
     {
       "src": "favicon.ico",
